--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
+**/.DS_Store
+*.esproj
+*.iml
+*.ipr
+*.iws
+*.orig
+.env
+.idea
+.idea
+.monitor
+.s3creds
+.vscode/*
 /bower_components
+/build
+/components
+/dist
+/reports
+/static
+analysis.json
+builtAssets/
+builtBundles/
+keys/
+node_modules
+npm-debug.log
+npm-debug.log
+Procfile.debug
+target
+wct.log
