--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,24 @@
 {
   "name": "resettable-properties-behavior",
-  "description": "lets you easily reset polymer element properties to their default values.",
+  "version": "0.1.3",
+  "description": "Polymer behavior that lets you easily reset polymer element properties to their default values.",
   "main": "resettable-properties-behavior.html",
   "dependencies": {
     "polymer": "Polymer/polymer#1 - 2"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-    "web-component-tester": "^4.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+    "iron-component-page": "PolymerElements/iron-component-page#1 - 3",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#1 - 2",
+    "web-component-tester": "Polymer/web-component-tester#5 - 6",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#0.7 - 1"
   },
-  "keywords": [
-    "polymer",
-    "web-components"
+  "ignore": [
+    ".*",
+    "bin/",
+    "bin/*",
+    "test/",
+    "test/*",
+    "wct.conf.json"
   ],
   "authors": [
     "Daniel Liljeström"
